--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,3 @@
-@import './base/settings';
 @import './base/base';
-@import './components/container';
+// @import './base/settings';
+// @import './base/variables';
