--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,3 @@
+@import './custom/variables';
+@import '../../node_modules/bootstrap/scss/bootstrap';
 @import './base/base';
-// @import './base/settings';
-// @import './base/variables';
